@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- removed grid flickering (grid mask) when auto-refresh is activated
 - fixed a problem where GoodNews groups which were assigned to MODX user groups couldn't be unassigned
 
 
